<resources>
    <string name="release_1"><![CDATA[1.0 <b>Initial release</b>
    <br/>- Create "Countdowns" that you want to track across a given time frame
    <br/>- Not much more too it than that but I hope it can be useful for you]]></string>
    <string name="release_2"><![CDATA[1.1 <b>Formality</b>
    <br/>- Added privacy policy links in the app
    <br/>- Usual bug fixes and improvements]]></string>
    <string name="release_3"><![CDATA[1.2 <b>Dark Mode</b>
    <br/>- Added support for dark mode
    <br/>- Usual bug fixes and improvements]]></string>
    <string name="release_4"><![CDATA[1.3 <b>Whoops</b>
    <br/>- Fixed dark mode not applying to about screen
    <br/>- Fixed google play store link]]></string>
    <string name="release_5"><![CDATA[1.4
    <br/>- Migrated settings to use proper settings structure
    <br/>- Reordered settings into new categories
    <br/>- Added some initial options for countdown types
    <br/>- Updated utilities to 1.1.1, components to 2.0.0 ]]></string>
    <string name="release_6"><![CDATA[1.5
    <br/>- Added type labels on preview cars
    <br/>- Added standard days support for countdown
    <br/>- Updated components to 2.0.1
    <br/>- Updated constraint layout to 2.0.0-beta6
    <br/>- Updated progress bar to 1.0.1]]></string>
    <string name="release_7"><![CDATA[2.0 <b>Widgets</b>
    <br/>- Widget support! From your home screen see a snapshot of the current progress. Dark and light mode supported
    <br/>- Updated some settings wording
    <br/>- Updated about this app information]]></string>
    <string name="release_8"><![CDATA[2.1
    <br/>- Fixed minimum widget size for home screen on some phones
    <br/>- Updated dependencies]]></string>
    <string name="release_9"><![CDATA[2.2
    <br/>- Added widget update date to widgets
    <br/>- Added settings toggle for new widget update date to customise
    <br/>- Fixed some typos throughout the modify screen]]></string>
    <string name="release_10"><![CDATA[2.3
    <br/>- Fixes days countdown type edge cases with some dates showing incorrect rounded number of days
    <br/>- Fixed widget label for light mode / dark mode
    <br/>- Updated google analytics to 17.4.3
    <br/>- Updated google crashlytics to 17.0.1
    <br/>- Updated material components to 1.3.0-alpha01
    <br/>- Updated components to 2.1.0, utilities to 2.0.1]]></string>
    <string name="release_11"><![CDATA[2.4
    <br/>- Fixed a bug in the list where some new items wouldn\'t show
    <br/>- Updated koin to 2.1.6]]></string>
    <string name="release_12"><![CDATA[2.5
    <br/>- Added yen, kg, g, l, ml, s, mm as countdown types
    <br/>- Fixed theming issues in about this app section
    <br/>- Updated crashlytics gradle to 2.2.0
    <br/>- Updated crashlytics to 17.1.0
    <br/>- Updated lifecycle dependencies to 2.3.0-alpha04
    <br/>- Updated labelled-progress-bar to 1.0.3
    <br/>- Updated contraintlayout to 2.0.0-beta7]]></string>
    <string name="release_13"><![CDATA[2.5.1
    <br/>- Added temperature scales
    <br/>- Fixed some typos throughout the settings
    <br/>- Updated firebase
    <br/>- Updated contraintlayout to 2.0.0-beta8]]></string>
    <string name="release_14"><![CDATA[2.6.0
    <br/>- Added progress type switcher! Now choose between linear, accelerate, decelerate, and accelerate-decelerate progression types
    <br/>- Fixed some typos throughout the settings]]></string>
    <string name="release_15"><![CDATA[2.7.0
    <br/>- General stability updates and bug fixes
    <br/>- More typos fixed throughout. Tweaked widget adding screen]]></string>
    <string name="release_16"><![CDATA[3.0.0
    <br/>- Android R support
    <br/>- New about this app screen
    <br/>- Fixed some random crashes throughout the app]]></string>
    <string name="release_18"><![CDATA[3.0.2
    <br/>- Dependency updates
    <br/>- Incredibly minor bug fixes]]></string>
    <string name="release_19"><![CDATA[3.1.0
    <br/>- Adds circular progress widget!
    <br/>- Increases minimum support version to API 23]]></string>
    <string name="release_20"><![CDATA[3.1.1
    <br/>- Usual assortment of bug fixes and dependency updates]]></string>
    <string name="release_22"><![CDATA[3.1.3
    <br/>- Fixed edge case bug where sometimes last value in progress bar would not be accurate]]></string>
    <string name="release_23"><![CDATA[3.1.4
    <br/>- Minor bug fixes and dependency updates]]></string>
    <string name="release_24"><![CDATA[3.2.0
    <br/>- Changed date range selector
    <br/>- Fixed minor theming and updating glitches throughout]]></string>
    <string name="release_25"><![CDATA[3.2.1
    <br/>- Tweaked settings options layout
    <br/>- Minor bug fixes and dependency updates]]></string>
    <string name="release_27"><![CDATA[3.2.3
    <br/>- Adds support for colour of the progress bar for widget
    <br/>- Minor stability improvements
    <br/>- Minor theming fixes for widget flow]]></string>
    <string name="placeholder_title">No items found</string>
    <string name="settings_title">Settings</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_theme_theme_title">App theme</string>
    <string name="settings_theme_theme_description">Pick your theming preference</string>
    <string name="settings_theme_theme_summary">Pick here between following your system theming or overriding a light or dark theme</string>
    <string name="settings_widgets">Widgets</string>
    <string name="settings_widgets_refresh_title">Refresh widgets</string>
    <string name="settings_widgets_refresh_description">Widgets should refresh every hour, but you can force refresh them by clicking here. You can also tap the widget directly to update it at any time</string>
    <string name="settings_widgets_refresh_refreshed">Widgets have been refreshed</string>
    <string name="settings_widgets_updated_title">Show widget updated date</string>
    <string name="settings_widgets_updated_description">Hide or show the \'Updated at\' label on your widgets.</string>
    <string name="settings_reset">Reset</string>
    <string name="settings_reset_all_title">Delete all</string>
    <string name="settings_reset_all_description">Delete all the items that you have setup in the app</string>
    <string name="settings_reset_all_done">Items have been cleared</string>
    <string name="settings_reset_done_title">Delete done</string>
    <string name="settings_reset_done_description">Delete all the items that are in your previous tab</string>
    <string name="settings_reset_done_done">Items have been cleared</string>
    <string name="settings_help">About</string>
    <string name="settings_feedback">Feedback</string>
    <string name="settings_privacy">Privacy</string>
    <string name="settings_help_about_title">About this app</string>
    <string name="settings_help_about_description">About the application and the developer</string>
    <string name="settings_help_review_title">Rate</string>
    <string name="settings_help_review_description">Review this app on the google play store</string>
    <string name="settings_help_release_notes_title">Release notes</string>
    <string name="settings_help_release_notes_description">See the release notes history</string>
    <string name="settings_help_crash_reporting_title">Crash Reporting</string>
    <string name="settings_help_crash_reporting_description">Send device information and crash stack traces to the developer</string>
    <string name="settings_help_crash_reporting_after_app_restart">Your crash reporting preference will be applied once the app has restarted</string>
    <string name="settings_help_analytics_title">Anonymous Analytics</string>
    <string name="settings_help_analytics_description">Opt in to anonymous analytics about using the app </string>
    <string name="settings_help_analytics_after_app_restart">Your analytic preference will be applied once the app has restarted</string>
    <string name="settings_help_suggestions_title">Have a suggestion?</string>
    <string name="settings_help_suggestions_description">Send the developer an email with any suggestions you may have. Alternately turn on shake to report and shake your device</string>
    <string name="send_email">Send email</string>
    <string name="settings_help_shake_to_report_title">Shake the app to report a bug or a feature?</string>
    <string name="settings_help_shake_to_report_description">Shake the app at any time to screenshot and send me any bugs, issues, or suggestions you may have for this app!</string>
    <string name="settings_help_shake_to_report_after_app_restart">Your shake to report preference will be applied once the app has restarted</string>
    <string name="settings_help_privacy_policy_title">Privacy Policy</string>
    <string name="settings_help_privacy_policy_description">View our privacy policy here</string>
    <string name="settings_reset_all_confirm_title">Are you sure?</string>
    <string name="settings_reset_all_confirm_description">This will remove all previous and current countdown items that you have!</string>
    <string name="settings_reset_all_confirm_confirm">Yes</string>
    <string name="settings_reset_all_confirm_cancel">Cancel</string>
    <string name="settings_reset_done_confirm_title">Are you sure?</string>
    <string name="settings_reset_done_confirm_description">This will remove all the items that you have in your previous tab.</string>
    <string name="settings_reset_done_confirm_confirm">Yes</string>
    <string name="settings_reset_done_confirm_cancel">Cancel</string>
    <string name="countdown_type_number">Number</string>
    <string name="countdown_type_days">Days</string>
    <string name="countdown_type_money_gbp">Money (£)</string>
    <string name="countdown_type_money_usd">Money ($)</string>
    <string name="countdown_type_money_eur">Money (€)</string>
    <string name="countdown_type_money_yen">Money (¥)</string>
    <string name="countdown_type_millimetres">Millimetres</string>
    <string name="countdown_type_metres">Metres</string>
    <string name="countdown_type_kilometres">Kilometres</string>
    <string name="countdown_type_miles">Miles</string>
    <string name="countdown_type_grams">Grams</string>
    <string name="countdown_type_kilograms">Kilograms</string>
    <string name="countdown_type_millilitres">Millilitres</string>
    <string name="countdown_type_litres">Litres</string>
    <string name="countdown_type_seconds">Seconds</string>
    <string name="countdown_type_celsius">Celsuis</string>
    <string name="countdown_type_fahrenheit">Fahrenheit</string>
    <string name="theme_auto">Follow system</string>
    <string name="theme_light">Light theme</string>
    <string name="theme_dark">Dark theme</string>
</resources>