<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?attr/pBackgroundSecondary"
    android:id="@+id/bsTheme"
    android:paddingTop="@dimen/paddingMedium"
    android:paddingBottom="@dimen/paddingVLarge"
    app:behavior_hideable="true"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        style="@style/Text.Settings.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/paddingMedium"
        android:paddingEnd="@dimen/paddingMedium"
        android:text="@string/settings_theme_theme_title" />

    <TextView
        style="@style/Text.Settings.Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:paddingStart="@dimen/paddingMedium"
        android:paddingEnd="@dimen/paddingMedium"
        android:text="@string/settings_theme_theme_summary" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clThemeAuto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/ripple_rounded"
        android:paddingStart="@dimen/paddingMedium"
        android:paddingTop="@dimen/paddingNSmall"
        android:paddingEnd="@dimen/paddingMedium"
        android:paddingBottom="@dimen/paddingNSmall">

        <ImageView
            android:id="@+id/imgAuto"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:background="@drawable/background_edit_text"
            android:paddingStart="@dimen/paddingSmall"
            android:paddingTop="@dimen/paddingSmall"
            android:paddingEnd="@dimen/paddingSmall"
            android:paddingBottom="@dimen/paddingSmall"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_settings_check" />

        <TextView
            style="@style/Text.Settings.Description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/theme_auto"
            app:layout_constraintBottom_toBottomOf="@id/imgAuto"
            app:layout_constraintEnd_toStartOf="@id/imgAuto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clThemeLight"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/ripple_rounded"
        android:paddingStart="@dimen/paddingMedium"
        android:paddingTop="@dimen/paddingNSmall"
        android:paddingEnd="@dimen/paddingMedium"
        android:paddingBottom="@dimen/paddingNSmall">

        <ImageView
            android:id="@+id/imgLight"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:background="@drawable/background_edit_text"
            android:paddingStart="@dimen/paddingSmall"
            android:paddingTop="@dimen/paddingSmall"
            android:paddingEnd="@dimen/paddingSmall"
            android:paddingBottom="@dimen/paddingSmall"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_settings_check" />

        <TextView
            style="@style/Text.Settings.Description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/theme_light"
            app:layout_constraintBottom_toBottomOf="@id/imgLight"
            app:layout_constraintEnd_toStartOf="@id/imgLight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clThemeDark"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true"
        android:foreground="@drawable/ripple_rounded"
        android:paddingStart="@dimen/paddingMedium"
        android:paddingTop="@dimen/paddingNSmall"
        android:paddingEnd="@dimen/paddingMedium"
        android:paddingBottom="@dimen/paddingNSmall">

        <ImageView
            android:id="@+id/imgDark"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:background="@drawable/background_edit_text"
            android:paddingStart="@dimen/paddingSmall"
            android:paddingTop="@dimen/paddingSmall"
            android:paddingEnd="@dimen/paddingSmall"
            android:paddingBottom="@dimen/paddingSmall"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_settings_check" />

        <TextView
            style="@style/Text.Settings.Description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/theme_dark"
            app:layout_constraintBottom_toBottomOf="@id/imgDark"
            app:layout_constraintEnd_toStartOf="@id/imgDark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>